[tool.poetry]
name = "repl_python3_beta_stemlearningpythoncheck"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-wtf = "^0.15.1"
flask-bcrypt = "^0.7.1"
flask-login = "^0.5.0"
flask-socketio = "^5.1.0"
wtforms = "^2.3.3"
apscheduler = "^3.7.0"
flask-sqlalchemy = "^2.5.1"
nexmo = "^2.5.2"
email-validator = "^1.1.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
